--- a/jobMarket/src/app/vacancy-dashboard/vacancy-dashboard.component.html
+++ b/jobMarket/src/app/vacancy-dashboard/vacancy-dashboard.component.html
@@ -1,2 +1,6 @@
-<button mat-raised-button (click)="openAddVacancy()">Add New Vacancy</button>
-<!-- <app-vacancy></app-vacancy> -->
+<br>
+
+<button class="crudButton" mat-raised-button (click)="openAddVacancy()">Add New Vacancy</button>
+<button class="crudButton" mat-raised-button (click)="openEditVacancy()">Update A Vacancy</button>
+<br> 
+<app-vacancy-dashboard-data-table> </app-vacancy-dashboard-data-table>
