--- a/jobMarket/src/app/role-dashboard-data-table/role-dashboard-data-table.component.html
+++ b/jobMarket/src/app/role-dashboard-data-table/role-dashboard-data-table.component.html
@@ -1,4 +1,4 @@
-<mat-form-field>
+<mat-form-field class="crudButton">
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
 </mat-form-field>
 
@@ -7,11 +7,9 @@
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-        
-      <tr *ngFor="let role of allRoles"> 
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Job Role</th>
         <td mat-cell *matCellDef="let row"> <a mat-tab-link [routerLink]="['/role',row.roleId]">{{row.roleName}}</a></td>
-      </tr>
+    
     </ng-container>
 
     <!-- Category Column -->
