--- a/jobMarket/src/app/nav-bar/nav-bar.component.html
+++ b/jobMarket/src/app/nav-bar/nav-bar.component.html
@@ -8,6 +8,7 @@
       <a mat-list-item routerLink="/role-dashboard">Role Dashboard</a>
       <a mat-list-item routerLink="/vacancy-dashboard">Vacancy Dashboard</a>
       <a mat-list-item routerLink="/role-admin">Role Admin</a>
+      <a mat-list-item routerLink="/user/userId">My Profile</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -26,7 +27,10 @@
       <span class="spacer"></span> 
       <a routerLink="/role-dashboard">Role Dashboard </a>
       <a routerLink="/vacancy-dashboard">Vacancy Dashboard </a>
-      <a routerLink="/role-admin"> Role Admin</a>
+      <!-- <span *ngIf="true"> insert if statement to check user/admin -->
+        <a routerLink="/role-admin"> Role Admin</a>
+      <!-- </span> -->
+        <a routerLink="/user/1"> My Profile</a>
     </mat-toolbar>
     <ng-content> 
     </ng-content>
