--- a/jobMarket/src/app/vacancy-dashboard-data-table/vacancy-dashboard-data-table.component.html
+++ b/jobMarket/src/app/vacancy-dashboard-data-table/vacancy-dashboard-data-table.component.html
@@ -26,7 +26,7 @@
 
       <ng-container matColumnDef="title">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
-          <td mat-cell *matCellDef="let vac">{{vac.title}}</td>
+          <td mat-cell *matCellDef="let vac"><a mat-tab-link [routerLink]="['/vacancy',vac.vacancyId]">{{vac.title}}</a></td>
       </ng-container>
 
       <ng-container matColumnDef="uploadYear">
