--- a/jobMarket/src/app/user/user.component.html
+++ b/jobMarket/src/app/user/user.component.html
@@ -25,8 +25,10 @@
 <table>
     <td>
     </td>
-    <td *ngFor="let vacancy of savedVacancies, let i = index">
+    <span *ngFor="let vacancy of savedVacancies, let i = index">
+    <td>
         <tr><a [routerLink]="['/vacancy',vacancy.vacancyId]"><h4>{{vacancy.title}}</h4></a></tr>
+        <tr><a href="{{vacancy.link}}">Apply</a></tr>
         <tr>{{vacancy.company}}</tr>
         <tr>{{vacancy.description}}</tr>
         <tr>{{numShared[i]}}/{{numSkills[i]}} common skills</tr>
@@ -40,5 +42,6 @@
         </tr>
         <tr><button mat-raised-button (click)="deleteFromVacancies(savedVacancies[i].vacancyId)">Drop</button></tr>
     </td>
+    </span>
 </table>
 </div>
