--- a/jobMarket/src/app/register/register.component.html
+++ b/jobMarket/src/app/register/register.component.html
@@ -1,10 +1,11 @@
 <h1>Register Account</h1>
-<form (submit)="signUp()">
-        <table>
+
 <app-welcome></app-welcome>
+<form (submit)="signUp()">
         <table id="registerTable">
                 <tr>
                     <th>Username:</th>
+                    <td><input [(ngModel)]="username" name="username"></td>
                 </tr> 
                 <tr>
                     <th>Password:</th>
