vacancy page created and linked

--- a/jobMarket/src/app/nav-bar/nav-bar.component.html
+++ b/jobMarket/src/app/nav-bar/nav-bar.component.html
@@ -30,7 +30,9 @@
       <!-- <span *ngIf="true"> insert if statement to check user/admin -->
         <a routerLink="/role-admin"> Role Admin</a>
       <!-- </span> -->
+      <!-- CHECK FOR USER/COMPANY/ADMIN -->
         <a routerLink="/user/1"> My Profile</a>
+        <a routerLink="/company/251"> My Profile</a>
     </mat-toolbar>
     <ng-content> 
     </ng-content>
