--- a/jobMarket/src/app/register/register.component.html
+++ b/jobMarket/src/app/register/register.component.html
@@ -1,10 +1,11 @@
 <h1>Register Account</h1>
 <form (submit)="signUp()">
-       
+       <h1>{{myUserId}}</h1><h2>{{userId}}</h2>
 <app-welcome></app-welcome>
         <table id="registerTable">
                 <tr>
                     <th>Username:</th>
+                    <td><input [(ngModel)]="username" name="username"></td>
                 </tr> 
                 <tr>
                     <th>Password:</th>
