--- a/jobMarket/src/app/vacancy-dashboard/vacancy-dashboard.component.html
+++ b/jobMarket/src/app/vacancy-dashboard/vacancy-dashboard.component.html
@@ -1,5 +1,5 @@
 <br>
-
+<h1>{{myUserId}}</h1>
 <button class="crudButton" mat-raised-button (click)="openAddVacancy()">Add New Vacancy</button>
 <button class="crudButton" mat-raised-button (click)="openEditVacancy()">Update A Vacancy</button>
 <br> 
