--- a/jobMarket/src/app/company/company.component.css
+++ b/jobMarket/src/app/company/company.component.css
@@ -22,14 +22,29 @@ img{
     width: 50px
 }
 
-#vacancyTable{
-    margin: auto;
-    width: 90%;
-    padding: 10px;
-    float: inherit;
-    text-align: left
+.mainB{
+    margin: 10px 10px 10px 10px;
+    font-size: 20px;
+    
 }
 
-#vacancyTable button{
-    margin: 10px 10px 10px 10px;
+.flex-container{
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-wrap: wrap
+}
+
+.vacancyTable{
+    margin: 20px;
+    width: 90%;
+    padding: 40px;
+    text-align: center;
+
+}
+
+.optionButtons {
+    font-size: 14px;
+    margin:auto;
+
 }
