--- a/jobMarket/src/app/company/company.component.html
+++ b/jobMarket/src/app/company/company.component.html
@@ -2,9 +2,17 @@
 <h3>{{hqLocation}}</h3>
 <a href="{{linkedIn}}"><img id="linkedIn" src="https://www.shareicon.net/data/512x512/2015/09/23/106002_logo_512x512.png"></a>
 <h2>My Listed Vacancies</h2>
-<table id="vacancyTable"><td *ngFor="let vacancy of companyVacancies">
-    <tr><h3><a href="{{vacancy.link}}">{{vacancy.title}}</a></h3></tr>
+<div class="flex-container">
+<span *ngFor="let vacancy of companyVacancies">
+<table class="vacancyTable"><td>
+    <tr><h3><button class="mainB" mat-raised-button (click)="openVacancy(vacancy.vacancyId)">{{vacancy.title}}</button></h3></tr>
     <tr>{{vacancy.location}}</tr>
     <tr>{{vacancy.salary}}</tr>
     <tr>{{vacancy.postTime}} | {{vacancy.uploadYear}}</tr>
+    <tr><a href="{{vacancy.link}}">View site</a></tr>
+    <tr><button class="optionButtons" mat-raised-button (click)="setFilled(vacancy.vacancyId)">Filled</button>
+        <button class="optionButtons" mat-raised-button (click)="setDeleted(vacancy.vacancyId)">Delete</button></tr>
 </td></table>
+</span>
+</div>
+
