--- a/jobMarket/src/app/role-dashboard/role-dashboard.component.html
+++ b/jobMarket/src/app/role-dashboard/role-dashboard.component.html
@@ -1,4 +1,6 @@
 <!-- <h2>Role Dashboard</h2> -->
 <!-- <input type="text" placeholder="Search" [(ngModel)]="searchText" autocomplete="off"> -->
+<button mat-raised-button (click)="openAddRole()">Add New Role</button>
+<button mat-raised-button (click)="openEditRole()"> Edit Roles</button>
 
 <app-role-dashboard-data-table> </app-role-dashboard-data-table>
