--- a/jobMarket/src/app/register/register.component.html
+++ b/jobMarket/src/app/register/register.component.html
@@ -30,3 +30,4 @@
             <div *ngIf="!isUniqueUsername">Username is taken. Please enter a new username</div>
 
 </form>
+<app-userlogin></app-userlogin>
