--- a/jobMarket/src/app/new-listing/new-listing.component.html
+++ b/jobMarket/src/app/new-listing/new-listing.component.html
@@ -10,7 +10,7 @@
             </mat-form-field>&nbsp;&nbsp; 
           
             <mat-form-field class="example-full-width">
-                <input matInput readonly [(ngModel)]="newCompany.companyName" name="newCompanyName" [ngModelOptions]="{standalone: true}" placeholder="{{newCompany.companyName}}">
+                <input matInput readonly [(ngModel)]="newCompany.companyId" name="newCompanyName" [ngModelOptions]="{standalone: true}" placeholder="{{newCompany.companyName}}">
                 </mat-form-field>&nbsp;&nbsp;
        
             <mat-form-field class="example-full-width">
