fixed update and add role

--- a/jobMarket/src/app/add-role/add-role.component.html
+++ b/jobMarket/src/app/add-role/add-role.component.html
@@ -3,11 +3,12 @@
 <tr>
         <td> 
             <mat-form-field class="example-full-width">
-            <input matInput [(ngModel)]="newRoleName"  placeholder="Role Name" #inputName="ngModel" name="newRoleName" [ngModelOptions]="{standalone: true}">
+            <input matInput [(ngModel)]="newRoleName"  placeholder="Role Name"  name="newRoleName" [ngModelOptions]="{standalone: true}" >
             </mat-form-field>&nbsp;&nbsp; 
           
             <mat-form-field class="example-full-width">
-            <input matInput [(ngModel)]="newCategory" placeholder="Category" #inputName="ngModel" name="newCategory" [ngModelOptions]="{standalone: true}" >
+            <input matInput [(ngModel)]="newCategory" placeholder="Category"  name="newCategory" [ngModelOptions]="{standalone: true}" >
+            
             </mat-form-field>&nbsp;&nbsp; 
         </td>
 </tr>
