--- a/jobMarket/src/app/vacancy-dashboard-data-table/vacancy-dashboard-data-table.component.css
+++ b/jobMarket/src/app/vacancy-dashboard-data-table/vacancy-dashboard-data-table.component.css
@@ -1,20 +1,23 @@
+
+.data-table {
+  margin: 20px auto; 
+}
+
 .full-width-table {
   width: 100%;
 }
 
-.full-width-table td{
-  width: 40px;
-  padding-left: 10px;
-  padding-right: 10px
+.mat-form-field {
+  padding-left: 20px;
+  font-size: 14px;
+  width: 100%;
+  padding-right: 20px;
+}
+
+.data-table {
+  margin: 20px auto; 
 }
 
 .crudButton {
-  margin-left: 32px;
-  margin-top: 5px; 
+  margin-left: 15px;
 }
-
-.vacancyDashDescription{
-  overflow: hidden;
-  width: 60px;
-}
-
