--- a/jobMarket/src/app/nav-bar/nav-bar.component.html
+++ b/jobMarket/src/app/nav-bar/nav-bar.component.html
@@ -7,7 +7,6 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/role-dashboard">Role Dashboard</a>
       <a mat-list-item routerLink="/vacancy-dashboard">Vacancy Dashboard</a>
-      <a mat-list-item routerLink="/role-admin">Role Admin</a>
       <a mat-list-item routerLink="/user/userId">My Profile</a>
     </mat-nav-list>
   </mat-sidenav>
@@ -28,7 +27,7 @@
       <a routerLink="/role-dashboard">Role Dashboard </a>
       <a routerLink="/vacancy-dashboard">Vacancy Dashboard </a>
       <!-- <span *ngIf="true"> insert if statement to check user/admin -->
-        <a routerLink="/role-admin"> Role Admin</a>
+        <!-- <a routerLink="/role-admin"> Role Admin</a> -->
       <!-- </span> -->
       <!-- CHECK FOR USER/COMPANY/ADMIN -->
         <a routerLink="/user/1"> My Profile</a>
