--- a/jobMarket/src/app/register/register.component.html
+++ b/jobMarket/src/app/register/register.component.html
@@ -1,8 +1,8 @@
-<h1>Register Account</h1>
+<!-- <h1>Register Account</h1> -->
 
        
-<app-welcome></app-welcome>
-<form (submit)="signUp()">
+<!-- <app-welcome></app-welcome> -->
+<form >
         <table id="registerTable">
                 <tr>
                     <th>Username:</th>
@@ -21,7 +21,7 @@
                     <td><input [(ngModel)]="email" name="email"></td>  
                 </tr>
                 <tr>
-                    <input type="submit" value="Register">
+                    <button  value="Register" (click)="signUp()">Register</button>
             </tr>
             </table>
 
