--- a/jobMarket/src/app/role-admin/role-admin.component.html
+++ b/jobMarket/src/app/role-admin/role-admin.component.html
@@ -1,27 +1,18 @@
-<!-- <form *ngIf="isVacancyFormVisible" (submit)="showUpdateVacancyForm()"> -->
     <table id="vacancyTable" *ngIf="!isVacancyEditable">
-             <tr>Select Vacancy</tr>
-            <td>
-                    <select  [(ngModel)]="selectedLevel" name="vacancyId" #selectVacancyId
-                    (change)="selected()"> 
-                        <option *ngFor="let v of allVacancies" [ngValue]="v">
-                            {{v.vacancyId}}:{{v.title}}, {{v.company}}
-                        </option>
-                    </select>
-            </td> 
-        <!-- <mat-form-field>
+        <mat-form-field>
             <mat-label>Select A Vacancy</mat-label>
-            <mat-select [(ngModel)]="selectedLevel">
-                <mat-option *ngFor="let v of allVacancies" value="{{v.vacancyId}}" (change)="selected(v.vacancyId)">
+            <mat-select [(ngModel)]="selectedLevel" (ngModelChange)="selected()">
+                <mat-option *ngFor="let v of allVacancies" [value]="v">
                         {{v.title}}, {{v.company}}
                 </mat-option>
             </mat-select>
-        </mat-form-field> -->
-          
-        <tr> <button mat-raised-button color="accent" type="submit" value="Open" (click)="showUpdateVacancyForm()" *ngIf="!isUpdateVacancyFormVisible" >Open</button> 
-        </tr>
+        </mat-form-field>
+        <div style="text-align:center;"> 
+        <button mat-raised-button color="accent" type="submit" value="Open" (click)="showUpdateVacancyForm()" *ngIf="!isUpdateVacancyFormVisible" >Edit</button> 
+        
+        </div>
     </table>
-<!-- </form>  -->
+
 
 <form *ngIf="isUpdateVacancyFormVisible">
         <hr>  
@@ -31,6 +22,7 @@
                 <!-- <td>Vacancy ID:</td>
                 <td>{{selectedLevel.vacancyId}}</td> -->
                 
+                <!-- No longer used as company is now an entity 
                 <td *ngIf="!isVacancyEditable">Company:</td>
                 <td *ngIf="!isVacancyEditable">{{selectedLevel.company}}</td>
                 <td *ngIf="isVacancyEditable">
@@ -38,7 +30,7 @@
                     <mat-label>Company</mat-label> 
                     <input matInput [(ngModel)]="company" name="company">
                     </mat-form-field>   
-                </td>&nbsp;
+                </td>&nbsp; -->
 
                 <td *ngIf="!isVacancyEditable">Title:</td>
                 <td *ngIf="!isVacancyEditable">{{selectedLevel.title}}</td>
@@ -47,7 +39,16 @@
                     <mat-label>Job Title</mat-label> 
                     <input matInput [(ngModel)]="title" name="title"> 
                     </mat-form-field>
-                </td>  
+                </td>  &nbsp;
+
+                <td *ngIf="!isVacancyEditable">Upload Year:</td>
+                <td *ngIf="!isVacancyEditable">{{selectedLevel.uploadYear}}</td>
+                <td *ngIf="isVacancyEditable">
+                    <mat-form-field class="example-full-width">
+                    <mat-label>Upload Year</mat-label> 
+                    <input matInput [(ngModel)]="selectedLevel.uploadYear" name="uploadYear">
+                    </mat-form-field> 
+                </td>
             </tr> 
 
             <tr> 
@@ -66,7 +67,7 @@
                     <mat-form-field class="example-full-width">
                     <mat-label>Job Type</mat-label> 
                     <input matInput [(ngModel)]="job_type" name="job type">
-                    </mat-form-field>
+                    </mat-form-field> &nbsp;
                 </td>
             </tr> 
             <tr> 
@@ -107,16 +108,7 @@
                     </mat-form-field>
                 </td>  
             </tr>
-            <tr>
-                <td *ngIf="!isVacancyEditable">Upload Year:</td>
-                <td *ngIf="!isVacancyEditable">{{selectedLevel.uploadYear}}</td>
-                <td *ngIf="isVacancyEditable">
-                    <mat-form-field class="example-full-width">
-                    <mat-label>Upload Year</mat-label> 
-                    <input matInput [(ngModel)]="selectedLevel.uploadYear" name="uploadYear">
-                    </mat-form-field>
-                </td>
-            </tr>
+            
             <tr>&nbsp;</tr>
             <hr> 
             <tr>    
