--- a/jobMarket/src/app/userlogin/userlogin.component.html
+++ b/jobMarket/src/app/userlogin/userlogin.component.html
@@ -1,7 +1,7 @@
-<h1>Login using into MastekJobs Account</h1>
+<!-- <h1>Login using into MastekJobs Account</h1> -->
 
        
-<app-welcome></app-welcome>
+<!-- <app-welcome></app-welcome> -->
 <form>
         <table id="loginTable">
                 <tr>
