--- a/jobMarket/src/app/vacancy-dashboard-data-table/vacancy-dashboard-data-table.component.html
+++ b/jobMarket/src/app/vacancy-dashboard-data-table/vacancy-dashboard-data-table.component.html
@@ -1,16 +1,10 @@
-<mat-form-field class="crudButton">
+<mat-form-field >
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
 </mat-form-field>
 
 <div class="mat-elevation-z8 data-table">
   <table mat-table class="full-width-table" matSort aria-label="Elements" id="vacancyDash" [dataSource]="dataSource">
 
-    <!-- Title Column -->
-    <ng-container matColumnDef="company">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
-        <td mat-cell *matCellDef="let vac">{{vac.thisCompany.companyName}}</td>
-      
-    </ng-container>
 
     <!-- Description Column -->
     <ng-container matColumnDef="description">
