--- a/jobMarket/src/app/vacancy-dashboard-data-table/vacancy-dashboard-data-table.component.html
+++ b/jobMarket/src/app/vacancy-dashboard-data-table/vacancy-dashboard-data-table.component.html
@@ -18,6 +18,11 @@
         <td mat-cell *matCellDef="let vac">{{vac.location}}</td>
       </ng-container>
 
+    <ng-container matColumnDef="company">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
+        <td mat-cell *matCellDef="let vac">{{vac.company.companyName}}</td>
+    </ng-container>
+
       <ng-container matColumnDef="title">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
           <td mat-cell *matCellDef="let vac"><button mat-raised-button (click)="openVacancy(vac.vacancyId)">{{vac.title}}</button></td>
