--- a/jobMarket/src/app/vacancy-dashboard-data-table/vacancy-dashboard-data-table.component.html
+++ b/jobMarket/src/app/vacancy-dashboard-data-table/vacancy-dashboard-data-table.component.html
@@ -20,7 +20,7 @@
 
     <ng-container matColumnDef="company">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
-        <td mat-cell *matCellDef="let vac">{{vac.company.companyName}}</td>
+        <td mat-cell *matCellDef="let vac">{{vac.thisCompany.companyName}}</td>
     </ng-container>
 
       <ng-container matColumnDef="title">
