--- a/jobMarket/src/app/vacancy-dashboard/vacancy-dashboard.component.html
+++ b/jobMarket/src/app/vacancy-dashboard/vacancy-dashboard.component.html
@@ -1,6 +1,6 @@
 <br>
 <h1>{{myUserId}}</h1>
 <button class="crudButton" mat-raised-button (click)="openAddVacancy()">Add New Vacancy</button>
-<button class="crudButton" mat-raised-button (click)="openEditVacancy()">Update A Vacancy</button>
+<button class="crudButton" mat-raised-button (click)="openEditVacancy()">Edit Vacancy</button>
 <br> 
 <app-vacancy-dashboard-data-table> </app-vacancy-dashboard-data-table>
