--- a/jobMarket/src/app/add-role/add-role.component.html
+++ b/jobMarket/src/app/add-role/add-role.component.html
@@ -3,11 +3,13 @@
 <tr>
         <td> 
             <mat-form-field class="example-full-width">
-            <input matInput [(ngModel)]="newRoleName"  placeholder="Role Name"  name="newRoleName" [ngModelOptions]="{standalone: true}" >
+            <input matInput [(ngModel)]="newRoleName"  placeholder="Role Name"  
+            name="newRoleName" [ngModelOptions]="{standalone: true}" >
             </mat-form-field>&nbsp;&nbsp; 
           
             <mat-form-field class="example-full-width">
-            <input matInput [(ngModel)]="newCategory" placeholder="Category"  name="newCategory" [ngModelOptions]="{standalone: true}" >
+            <input matInput [(ngModel)]="newCategory" placeholder="Category"  
+            name="newCategory" [ngModelOptions]="{standalone: true}" >
             
             </mat-form-field>&nbsp;&nbsp; 
         </td>
@@ -15,3 +17,4 @@
 
 <hr> 
     <button mat-raised-button color="accent" (click)="createNewRole()">Add Role</button>
+    <p *ngIf="!valid">{{validError}}</p>
