--- a/jobMarket/src/app/register/register.component.html
+++ b/jobMarket/src/app/register/register.component.html
@@ -26,7 +26,7 @@
             </table>
 
             <div *ngIf="!isError">Passwords do no match</div>
-            <div *ngIf="!isEmailCheck">Email is already registered. Please enter a new email</div>
+            <div *ngIf="!isUniqueEmail">Email is already registered. Please enter a new email</div>
             <div *ngIf="!isUniqueUsername">Username is taken. Please enter a new username</div>
 
 </form>
