--- a/jobMarket/src/app/welcome/welcome.component.html
+++ b/jobMarket/src/app/welcome/welcome.component.html
@@ -10,6 +10,6 @@
 <div style="text-align:center"> 
 <hr> 
 <button mat-raised-button (click)="openUser()">User</button><br><br>  
-<button mat-raised-button>Company</button><br><br>  
+<button mat-raised-button (click)="openCompany()">Company</button><br><br>  
 <button mat-raised-button>Admin</button>
 </div>
