--- a/jobMarket/src/app/welcome/welcome.component.html
+++ b/jobMarket/src/app/welcome/welcome.component.html
@@ -13,3 +13,4 @@
 <button mat-raised-button>Company</button><br><br>  
 <button mat-raised-button>Admin</button>
 </div>
+<button (click)="logInUser(90)">change id</button>
