--- a/jobMarket/src/app/nav-bar/nav-bar.component.html
+++ b/jobMarket/src/app/nav-bar/nav-bar.component.html
@@ -26,9 +26,13 @@
       <span class="spacer"></span> 
       <a routerLink="/role-dashboard">Role Dashboard </a>
       <a routerLink="/vacancy-dashboard">Vacancy Dashboard </a>
-        <a routerLink="/user/1"> My Profile</a>
-        <a routerLink="/company/251"> My Profile</a>
-        <button mat-button (click)="logOut()" ><mat-icon>power_settings_new</mat-icon></button>
+      <span *ngIf="myUserId!=-1">
+        <a routerLink="/user/1"> My User Profile</a>
+      </span>
+      <span *ngIf="myCompanyId!=-1">
+        <a routerLink="/company/251"> My Company Profile</a>
+      </span>
+      <button mat-button (click)="logOut()" ><mat-icon>power_settings_new</mat-icon></button>
     </mat-toolbar>
     <ng-content> 
     </ng-content>
