--- a/jobMarket/src/app/welcome/welcome.component.html
+++ b/jobMarket/src/app/welcome/welcome.component.html
@@ -13,4 +13,7 @@
 <button mat-raised-button>Company</button><br><br>  
 <button mat-raised-button>Admin</button>
 </div>
-<button (click)="logInUser(90)">change id</button>
+<button (click)="logInUser(1)">change user</button>
+<button (click)="logInCompany(251)">change company</button>
+
+
