--- a/jobMarket/src/app/userlogin/userlogin.component.html
+++ b/jobMarket/src/app/userlogin/userlogin.component.html
@@ -13,7 +13,7 @@
                     <td><input [(ngModel)]="password" name="password"></td>
                 </tr>
                 <tr>
-                    <button (click)="login()" value="login">Login</button>
+                    <button (click)="logInUser(userId)" value="login">Login</button>
             </tr>
             </table>
 
