--- a/jobMarket/src/app/vacancy-dashboard/vacancy-dashboard.component.html
+++ b/jobMarket/src/app/vacancy-dashboard/vacancy-dashboard.component.html
@@ -1,5 +1,5 @@
 <br>
-<h1>{{myUserId}}</h1>
+<h1>TEMPORARY STUFF: {{myUserId}}</h1>
 <span *ngIf="myCompanyId!=-1">
 <button class="crudButton" mat-raised-button (click)="openAddVacancy()">Add New Vacancy</button>
 <button class="crudButton" mat-raised-button (click)="openEditVacancy()">Edit Vacancy</button>
