--- a/jobMarket/src/app/company-register/company-register.component.html
+++ b/jobMarket/src/app/company-register/company-register.component.html
@@ -1,3 +1,4 @@
+<div style="text-align:center"> 
 <tr>
         <td> 
             <mat-form-field class="example-full-width">
@@ -31,3 +32,4 @@
 
 <hr> 
     <button mat-raised-button color="accent" (click)="signUp()">Register Company</button>
+</div>
