--- a/jobMarket/src/app/welcome/welcome.component.html
+++ b/jobMarket/src/app/welcome/welcome.component.html
@@ -9,9 +9,9 @@
 
 <div style="text-align:center"> 
 <hr> 
-<button mat-raised-button (click)="openUser()">User</button><br><br>  
-<button mat-raised-button (click)="openCompany()">Company</button><br><br>  
-<button mat-raised-button>Admin</button>
+<button mat-raised-button color="primary" (click)="openUser()">User</button><br><br>  
+<button mat-raised-button color="primary" (click)="openCompany()">Company</button><br><br>  
+<button mat-raised-button color="primary" >Admin</button>
 </div>
 <button (click)="logInUser(1)">change user</button>
 <button (click)="logInCompany(251)">change company</button>
