user login completed

--- a/jobMarket/src/app/register/register.component.html
+++ b/jobMarket/src/app/register/register.component.html
@@ -11,11 +11,11 @@
                 </tr> 
                 <tr>
                     <th>Password:</th>
-                    <td><input [(ngModel)]="password" name="password"></td>
+                    <td><input [(ngModel)]="password" name="password" type="password"></td>
                 </tr>
                 <tr>
                     <td>Confirm Password:</td>
-                    <td><input [(ngModel)]="confirmPassword" name="password"></td>
+                    <td><input [(ngModel)]="confirmPassword" name="password" type="password"></td>
                 </tr>
                 <tr>
                     <td>Email:</td>
