can login as company

--- a/jobMarket/src/app/userlogin/userlogin.component.html
+++ b/jobMarket/src/app/userlogin/userlogin.component.html
@@ -15,4 +15,4 @@
 
 </form>
 
-<div *ngIf="isError">login credentials could not be found</div>
+<div *ngIf="noError == false">login credentials could not be found</div>
